[package]
name = "rust-sig-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.16.0", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
schemars = "1"
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
ignore = "0.4"
semver = "1"
