[package]
name = "rust-signatures-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server that extracts and searches Rust function/struct/enum/trait/impl signatures and doc comments from source files and cached crates"
license = "MIT"
repository = "https://github.com/exlee/rust-signatures-mcp"
readme = "README.md"
keywords = ["mcp", "rust", "signatures", "code-analysis", "clap"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
rmcp = { version = "1.5.0", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
ignore = "0.4"
semver = "1"
regex = "1"
